export type Tag = {
    id: string
    name: string
    color: string
    description?: string
}