package com.springboot.MyTodoList.model;


import jakarta.persistence.*;
import lombok.Getter;
import lombok.Setter;

import java.util.UUID;

/*
    representation of the USER table that exists already
    in the autonomous database

    CREATE TABLE TODOUSER.USERS (
        ID NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY, -- ID autoincremental
        NAME VARCHAR2(50),        -- Campo para nombres, longitud máxima de 50 caracteres
        LASTNAME VARCHAR2(50),    -- Campo para apellidos, longitud máxima de 50 caracteres
        PHONENUMBER NUMBER(10),        -- Campo numérico, con un máximo de 10 dígitos
        USERPASSWORD VARCHAR2(100),    -- Campo para contraseñas, longitud máxima de 100 caracteres
        PRIMARY KEY (ID) -- Define ID como clave primaria
   );
 */
@Setter
@Getter
@Entity
@Table(name = "APP_USER")
public class User {
    @Id
    @Column(name = "user_id")
    String userId;

    @Column(name = "PHONE_NUMBER")
    String phoneNumber;

    @Column(name = "PASSWORD_HASH")
    String userPassword;
    
    @Column(name = "NAME")
    private String name;
    
    @Column(name = "telegram_user_id")
    private String telegramUserId;

    public User(){}

    public User(String ID, String number, String password){
        this.userId = ID;
        this.phoneNumber = number;
        this.userPassword = password;
    }

    // Assign a random UUID before insertion
    @PrePersist
    public void prePersist() {
        if (userId == null) {
            userId = UUID.randomUUID().toString();
        }
    }
}